# the-perfect-world-cup-fantasy-team

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
data/: historial-rondas.md  my-team.md
data/historical/: team_ids_2022.json
data/historical/2022/: team-1.json  team-10.json  team-1118.json  team-12.json  team-13.json  team-15.json  team-1504.json  team-1569.json  team-16.json  team-17.json  team-2.json  team-20.json  team-22.json  team-23.json  team-2382.json  team-2384.json  team-25.json  team-26.json  team-27.json  team-28.json  team-3.json  team-31.json  team-5529.json  team-6.json  team-7.json  team-9.json
data/snapshots/2026-06-12/: fifa_players.json  fifa_rounds.json  fifa_squads.json
data/snapshots/2026-06-13/: news.json
data/snapshots/2026-06-26/: fifa_players.json  fifa_rounds.json  fifa_squads.json
data/snapshots/2026-06-28/: fifa_players.json  fifa_rounds.json  fifa_squads.json
docs/: 00-onboarding.md  01-reglas.md  02-factores-de-puntos.md  03-fuentes-de-datos.md  04-plan-de-ejecucion.md  05-loop-de-optimizacion.md
docs/agents/: handoff.md
outputs/: md2-reporte.md  r32-reset.md
src/wcf/: cli.py  config.py  historical.py  myteam.py  optimizer.py  pool.py  projection.py  recommender.py  report.py  scoring.py  store.py  strategy.py
src/wcf/sources/: api_football.py  fifa_fantasy.py  news.py
